--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -2,4 +2,9 @@
 /c19_moderate
 /c20_hard
 /c4_trees_graphs
+/c5_bit_manipulation
+/c6_brain_teasers
+/c7_object_oriented_design
+/c8_recursion
+/c9_sorting_searching
 /leetcode
